--- a/tema/style.css
+++ b/tema/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: MedcalSan
+	Theme Name: MedStart Theme
 	Description: Tecnologia que transforma
 	Version: 1.0.0
 	Author: Marcelo Vieira by Agência Canarinho.
