--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -3905,6 +3905,13 @@ section.content-10-text h2 {
     margin-top: -9%;
 }
 
+.bg-azul {
+    background: linear-gradient(180deg, #2E62BA 0%, #1F0586 100%);
+    color: #fff;
+    text-align: center;
+    padding: 25px;
+}
+
 @media (max-width: 978px){
     .sub-title span {
     padding-left: 10px;
