--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -1860,15 +1860,47 @@ section.sem-limites-de-disparos p b {
 }
 
 .imagem-thumbnail {
-    height: 130px;
-    width: 130px !important;
+    height: 500px;
+    width: 100%;
     background-size: cover;
     margin-right: 15px;
     display: inline-block;
     cursor: pointer;
-    border-radius: 50%;
     background-color: white;
     border: 1px solid black;
+    margin-bottom: 10px;
+    position: relative;
+    border-radius: 25px;
+    overflow: hidden;
+}
+
+.imagem-thumbnail:before {
+    content: '';
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 100%;
+    height: 100%;
+    background: #ffffff91;
+    position: absolute;
+    left: 0;
+}
+
+.imagem-thumbnail:after {
+    content: '\e037';
+    font-family: 'Material Icons';
+    width: 45px;
+    height: 45px;
+    display: block;
+    color: #ffffff;
+    left: 50%;
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    margin-left: -15px;
+    margin-top: -22px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    /* padding: 20px; */
+    align-items: center;
 }
 
 .init-slider-video {
@@ -1878,11 +1910,11 @@ section.sem-limites-de-disparos p b {
 
 
 .slider-video  .slick-center .imagem-thumbnail {
-    height: 160px;
-    width: 160px !important;
     filter: drop-shadow(0px 15.0455px 15.0455px rgba(0, 0, 0, 0.25));
     position:relative;
-    top:-10px;
+    width: 100% !important;
+    height: 176px;
+    border-radius: 0px;
 }
 
 
@@ -3910,6 +3942,17 @@ section.content-10-text h2 {
     color: #fff;
     text-align: center;
     padding: 25px;
+}
+
+.bg-azul h3 {
+    font-size: 2.1rem;
+    font-weight: 800;
+    max-width: 300px;
+    margin: 28px auto;
+}
+
+.bg-azul h3 .maior {
+    font-size: 3rem;
 }
 
 @media (max-width: 978px){
