--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -3341,8 +3341,8 @@ div[aria-label="Slide"] {
 .botao-6 {
     position: relative;
     color: #ffffff;
-    background: black;
-    border: 1px solid #000000;
+    background: #230077;
+    border: 1px solid #230077;
     text-decoration: none;
     padding: 23px 17px;
     width: 255px;
