--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -516,15 +516,13 @@ a.navbar-tool-icon-box.bg-secondary.dropdown-toggle i {
 
 .bg-top-footer {
     position: relative;
-    width: 34%;
-    background: red;
+    width: 100%;
     height: 300px;
-    margin-top: -300px;
-    background: url('../../assets/images/bg-footer.svg') left bottom no-repeat;
+    margin-top: -260px;
+    background: url('../../assets/images/bg-footer.png') left bottom no-repeat;
     background-size: contain;
     margin-bottom: -3px;
     z-index: -1;
-    margin-left: -1px;
 }
 
 .js-scroll.fade-in, .js-scroll.slide-left, .js-scroll.slide-right, .js-scroll.fade-in-bottom {
@@ -731,18 +729,18 @@ section.box-lancamento .wp-block-column {
 }
 
 .page-blog.archive article h2 a {
-    color: black;
+    color: #230077;
     font-weight: 600;
 }
 
 .archive article a {
-    /* color: black; */
+    color: #230077;
     text-decoration: none;
     margin-right: 15px;
 }
 
 .archive article h2 a {
-    color: black;
+    color: #230077;
 }
 
 .archive h1 {
@@ -824,11 +822,12 @@ section.box-lancamento .wp-block-column {
 }
 
 section.box-text-estilo-1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align: center;
     font-family: 'Gotham', sans-serif;
     font-weight: 400;
-    margin: 30px 0px;
+    margin: 30px auto;
+    max-width: 800px;
 }
 
 
@@ -1894,7 +1893,7 @@ section.sem-limites-de-disparos p b {
     position: relative;
     border-radius: 25px;
     overflow: hidden;
-    background-position: center;
+    background-position: center top;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
 
@@ -1963,15 +1962,15 @@ section.sem-limites-de-disparos p b {
 }
 
 .banner-categories {
-    color: #fff;
-    padding: 56px;
-    background: black url('../../assets/images/bg-banner.svg') left bottom no-repeat;
+    color: #1F0586;
+    padding: 31px;
     background-size: cover;
-    text-align: center;
+    text-align: left;
 }
 
 .banner-categories h1 {
     font-size: 3rem;
+    font-weight: 800;
 }
 
 .banner-categories h2 {
@@ -1985,19 +1984,22 @@ section.sem-limites-de-disparos p b {
 }
 
 .lista-categories img {
-    max-width: 68%;
+    /* max-width: 68%; */
     margin: auto;
     /* display: block; */
+    width: 100%;
 }
 
 .lista-categories > div {
     margin-bottom: 16px;
     background: #FFFFFF;
-    border: 1px solid #E5E5E5;
+    border: 1px solid #2E62BA;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    border-radius: 30px;
     min-height: 176px;
+    background: linear-gradient(180deg, #2E62BA 0%, #1F0586 100%);
 }
 
 .lista-categories a {
@@ -2011,25 +2013,46 @@ section.sem-limites-de-disparos p b {
 
 .lista-categories a h2 {
     font-size: 2rem;
-    color: #0D2B78;
+    color: #ffffff;
     word-wrap: break-word;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 10px;
+    text-align: center;
+}
+
+.lista-categories a h2 i {
+    font-size: 42px;
+    margin-left: 20px;
+}
+
+.lista-categories > div:nth-child(2n+1) h2 {
+    color: #2E62BA;
 }
 
 .lista-categories a > div {
     width: 50%;
-    min-width: 217px;
+    /* min-width: 217px; */
     text-align: center;
 }
 
+.lista-categories a > div:first-child {
+    /* background: red; */
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* margin-right: 22px; */
+}
+
 .lista-categories > div:nth-child(2n+1) {
-    background: #E5E5E5;
+    background: #ffff;
 }
 
 main.main.main-categories {
-    background: linear-gradient(180deg, #E5E5E5 0%, rgba(229, 229, 229, 0) 100px);
+    /* background: linear-gradient(180deg, #E5E5E5 0%, rgba(229, 229, 229, 0) 100px); */
     padding-top: 18px;
     text-align: center;
     color: #0D2B78;
@@ -2037,6 +2060,7 @@ main.main.main-categories {
 
 main.main.main-categories h1 {
     font-weight: 900;
+    text-align: left;
     font-size: 3rem;
 }
 
@@ -2045,6 +2069,7 @@ main.main.main-categories h3 {
     font-size: 1.5rem;
     /* max-width: 700px; */
     margin: auto;
+    text-align: left;
 }
 
 main.main.main-categories h4 {
@@ -2052,6 +2077,7 @@ main.main.main-categories h4 {
     /* max-width: 700px; */
     font-size: calc(1.275rem + .3vw);
     font-weight: 800;
+    text-align: left;
 }
 
 main.main.main-categories h2 {
@@ -2059,6 +2085,7 @@ main.main.main-categories h2 {
     font-size: 1.5rem;
     /* max-width: 700px; */
     margin: auto;
+    text-align: left;
 }
 
 .lista-categories-prods {
@@ -2240,6 +2267,49 @@ footer .apps a img {
 section.carroussel-text .slick-track {
     display: flex;
     align-items: center;
+}
+
+.apresentacao-e-lista {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    margin-top: -36px;
+    margin-bottom: 30px;
+}
+
+
+.apresentacao-e-lista img {
+    position: relative;
+    z-index: 1;
+    width: 38%;
+    min-width: 209px
+}
+
+.apresentacao-e-lista ul {list-style: none;padding: 0;margin-left: -25px;padding-top: 20px;}
+
+.apresentacao-e-lista ul li {
+    border-bottom: 1px solid #fff;
+    width: 100%;
+    margin-bottom: 20px;
+    position: relative;
+    padding-left: 30px;
+    word-break: break-word;
+    text-align: left;
+    text-overflow: ellipsis;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.apresentacao-e-lista ul li:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    position: absolute;
+    bottom: -1px;
+    left: -31px;
 }
 
 @media (max-width: 1000px){
@@ -3038,6 +3108,22 @@ footer {
 footer a{
     color: #fff;
     text-decoration:none;
+}
+
+a.point-marker {
+    display: flex;
+    align-items: flex-start;
+    text-decoration: none;
+}
+
+a.point-marker:hover {
+    text-decoration: none;
+}
+
+a.point-marker i {
+    font-size: 37px;
+    margin-right: 14px;
+    text-decoration: none;
 }
 
 footer a:hover{
@@ -3877,12 +3963,13 @@ section.box-lancamento.estilo-1 {
 
 .single-produtos 
 .header-style-1 ul#breadcrumbs {
-    margin-top: 4%;
+    margin-top: 3%;
     color: #232354;
     position: absolute;
-    background: white;
+    /* background: white; */
     padding: 10px 25px;
     border-radius: 20px;
+    margin-left: 50px;
 }
 
 .single-produtos #breadcrumbs a, .single-produtos #breadcrumbs li, .single-produtos #breadcrumbs li.separator:after {
@@ -3932,6 +4019,7 @@ section.box-lancamento.estilo-1 {
     font-size: 2.3rem;
     text-align: center;
     margin-bottom: 27px;
+    color: #230077;
 }
 
 .form-footer form.wpcf7-form input:not(.botao-6), .form-footer form.wpcf7-form select {
@@ -3977,7 +4065,7 @@ section.content-10-text {
 }
 
 section.content-10-text h2 {
-    font-size: 2.6rem;
+    font-size: 1.9rem;
 }
 
 
@@ -3990,6 +4078,7 @@ section.content-10-text h2 {
     color: #fff;
     text-align: center;
     padding: 25px;
+    margin-top: 50px;
 }
 
 .lista-quad-itens {
@@ -3997,7 +4086,6 @@ section.content-10-text h2 {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
 }
 
 .lista-quad-itens > div {
@@ -4012,18 +4100,39 @@ section.content-10-text h2 {
     max-width: 330px;
 }
 
+
+@media(max-width:1078px){
+    .bg-azul .lista-quad-itens > div:nth-child(3):after {
+    display: none;
+}
+}
+
+
+@media(max-width:648px){
+    .bg-azul .lista-quad-itens > div:nth-child(2):after {
+    display: none;
+}
+
+}
 .bg-azul h3 {
-    /* font-size: 2.1rem; */
     font-weight: 800;
-    /* max-width: 300px; */
-    /* margin: 28px auto; */
-    padding: 0 15px;
+    padding: 8px 16px;
 }
 
 .bg-azul .lista-quad-itens > div:last-child {
     width: 100%;
     max-width: 100%;
-    margin-top: 50px;
+    margin-top: 15px;
+}
+
+.bg-azul .lista-quad-itens > div:last-child h3 {
+    font-weight: 800;
+    font-family: 'Gotham';
+    font-size: xx-large;
+}
+
+.bg-azul .lista-quad-itens > div:last-child h3 .maior {
+    font-size: larger;
 }
 
 .bg-azul .lista-quad-itens > div:after {
@@ -4055,7 +4164,9 @@ section.content-10-text h2 {
     .menu-principal a {
     color: #230077;
 }
-
+.bg-azul {
+    padding: 10px;
+}
 
 
   section.box-lancamento> div {
@@ -4680,8 +4791,8 @@ span.details_1 {
 }
 
   .bg-top-footer {
-    width: 35%;
-    margin-bottom: -1px;
+    /* width: 35%; */
+    /* margin-bottom: -1px; */
 }
   
 }
@@ -4900,12 +5011,46 @@ title-top-prod {
     font-size: 16px;
     font-weight: 700;
 }
+.category-desc {
+    background: linear-gradient(74.93deg, #31F1C5 5.62%, #230077 117.03%), #31F1C5;
+    padding: 48px 40px;
+    text-align: center;
+    color: #ffff;
+    font-size: xx-large;
+    margin: 25px 0;
+    border-radius: 34.4823px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
 
+.category-desc:after {
+    content: '\e315';
+    display: inline-block;
+    font-family: 'Material Icons';
+    font-size: 84px;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    margin-left: 0px;
+    transition: all 0.4s ease-out;
+    /* width: 16px; */
+    background-size: contain;
+    /* position: relative; */
+    /* top: 50%; */
+    font-weight: 100;
+}
+
+.category-desc p, .category-desc strong {
+    color: #fff;
+    max-width: 460px;
+    margin: auto;
+}
 @media (max-width:768px){
       .form-footer form.wpcf7-form p {
     width : 100% !important;
   }
-    .lista-categories a h2 {font-size: 1.2rem;display: block;}
+    .lista-categories a h2 {font-size: 1.2rem;display: flex;align-items: center;}
 
     section.aplicador-3-botoes img {
     display: none;
