--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -167,6 +167,11 @@ header {
     z-index: 99998;
 }
 
+.home .header-style-0 {
+    margin-bottom: -26%;
+    z-index: inherit;
+}
+
 header.header-style-2 {
     margin-bottom: -30%;
     z-index: inherit;
@@ -177,6 +182,13 @@ header.header-style-2 {
      padding-bottom: 20%;
      background-position: bottom;
      background-size: contain;
+}
+
+.home .bg-header-categorias {
+    background: transparent url(../../assets/images/header-filete-v2.png) center no-repeat;
+    padding-bottom: 28%;
+    background-size: 100%;
+    background-position: bottom;
 }
 
 
