--- a/tema/assets/css/custom.css
+++ b/tema/assets/css/custom.css
@@ -2156,7 +2156,7 @@ main.main.main-categories h4 {
 }
 
 main.main.main-categories h2 {
-    /* color: white; */
+    color: black;
     font-size: 1.3rem;
     /* max-width: 700px; */
     margin: auto;
